first lab (rest api) (sonar fix)